# model-pipeline

./: .gitignore  CLAUDE.md  README.md  evaluate_model.py  main.py  pyproject.toml  requirements.txt  train_lora.py
components/: activations.py  chat_template.py  diffusion.py  distillation.py  gradients.py  hf_utils.py  logit.py  loss.py  model_save_load.py  norm.py  rl.py  rope.py  tokenizer_usage.py
data/: sample_data.jsonl
docs/: distill.md  dpo.md  eval.md  lora.md  post-train.md  ppo.md  quantization.md
eval/: simple_eval.py
mymodel/: config.py  distill.py  dit.py  dmodel.py  dpo.py  generate.py  loader.py  lora.py  lora_train.py  mamaba.py  model.py  ppo.py  quantization.py  reward_model.py  run_distill.sh  run_dpo.py  run_dpo.sh  run_lora.sh  run_ppo.sh  run_trainer.sh  train_unet.py  trainer.py  u_net.py  vDit.py  video_vit.py  vit.py
mymodel/tests/: test_config.py  test_model.py
scripts/: run-dpo.sh  run-lora.sh  run.sh  train_distill.py  train_dpo.py  train_lora.py
tests/: test_cross_entropy_loss.py  test_data_loader.py  test_gradients.py  test_hugging_face.py  test_quantization.py  test_softmax.py
