[project]
name = "model-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=0.20.0",
    "datasets>=2.10.0",
    "dotenv>=0.9.9",
    "numpy>=1.24.0",
    "peft>=0.5.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[tool.ruff.format]
preview = true
